re PR libstdc++/23417 (bits/stl_tree.h isn't -Weffc++ clean)

2005-09-12  Benjamin Kosnik  <bkoz@redhat.com>

	PR libstdc++/23417
	* include/bits/stl_list.h (_List_impl): Use member initialization
	list for -Weffc++.

From-SVN: r104187